# TellyMeta

./: .env.example  .gitignore  .pylintrc  EmbyAPI.py  LICENSE  LoadConfig.py  README.md  Telegram.py  database.py  embyaccount.py  embyapi.py  gencode.py  loadconfig.py  main.py  pyproject.toml  requirements.txt  scheduler.py  scoremanager.py  telegram.py
.github/workflows/: codeql.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 151b6badb61e_initial_schema.py  530132ee9465_create_library_bindings_table.py  a66f6c77f8ba_make_active_codes_server_id_non_nullable.py  b0514ca045d1_add_allow_request_to_server_instances.py  ed544a07e347_add_cascade_delete_to_server_foreign_.py
arr/: Subtitlesarr.py  __init__.py  lidarr.py  radarr.py  searcharr.py  sonarr.py  subtitlesarr.py
bot/: __init__.py  admin.py  decorators.py  handlers.py  media.py  system.py  user.py  utils.py
clients/: ai_client.py  base_client.py  cached_tmdb_client.py  cached_tvdb_client.py  emby_client.py  jellyfin_client.py  qb_client.py  radarr_client.py  sonarr_client.py  tmdb_client.py  tvdb_client.py
core/: config.py  database.py  dependencies.py  initialization.py  lifespan.py  scheduler_jobs.py  telegram_manager.py  template_manager.py  webapp_auth.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml
media_api/: __init__.py  emby_api.py  jellyfin_api.py
models/: emby.py  emby_webhook.py  events.py  jellyfin.py  jellyfin_webhook.py  orm.py  protocols.py  qbittorrent.py  radarr.py  schemas.py  sonarr.py  tmdb.py  tvdb.py
notify/: __init__.py  notifyarr.py
repositories/: binding_repo.py  code_repo.py  config_repo.py  emby_repo.py  media_repo.py  server_repo.py  telegram_repo.py  verification_repo.py
routes/: miniapp_api.py  settings_api.py  webhooks.py
services/: account_service.py  cache_service.py  media_service.py  notification_service.py  request_service.py  score_service.py  settings_service.py  subtitle_service.py  user_service.py  verification_service.py
static/: account.html  miniapp.html  request.html  settings.html
templates/: emby_library_new.j2  episode.nfo.j2  jellyfin_library_new.j2  movie.nfo.j2  radarr_download.j2  radarr_movie_add.j2  request_approved.j2  request_completed.j2  request_rejected.j2  request_submit.j2  sonarr_download.j2  sonarr_series_add.j2  tvshow.nfo.j2
workers/: mkv_utils.py  mkv_worker.py  nfo_worker.py  translator_worker.py
