[project]
name = "TellyMeta"
version = "1.0.0"
description = "A personal media management tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "cryptg>=0.5.2",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "telethon>=1.42.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.pyright]
exclude = ["__pycache__"]
typeCheckingMode = "standard"
strictDictionaryInference = true
strictListInference = true
deprecateTypingAliases = true

[tool.pylint.format]
max-line-length = 120

[dependency-groups]
dev = [
    "types-lxml>=2026.1.1",
]
