[project]
name = "TellyMeta"
version = "1.0.0"
description = "A personal media management tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "cryptg>=0.6.0",
    "fastapi>=0.139.2",
    "httpx[socks]>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=2.46.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-socks>=2.8.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "telethon>=1.44.0",
    "uvicorn[standard]>=0.51.0",
]

[tool.pyright]
exclude = ["**/__pycache__", "**/.venv", "**/.env", ".git", "**/data", "**/logs"]
typeCheckingMode = "standard"
strictDictionaryInference = true
strictListInference = true
deprecateTypingAliases = true

[tool.pylint.format]
max-line-length = 120
